# nl2sql

./: README.md  app.py  config.py  pyproject.toml  requirements.txt
pipeline/: answer_generator.py  reasoning.py  sql_generator.py  verifier.py
templates/: index.html
