[project]
name = "nl2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "flask>=3.1.2",
    "huggingface-hub>=1.3.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlparse>=0.5.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
